# ml-2025

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  Dockerfile  Makefile  ReadMe.md  pyproject.toml  requirements.txt
irvine/: .gitconfig  air_quality.py  air_quality_eda.py  air_quality_etl.py  air_quality_model.py  air_quality_notebook.ipynb  tuning.py  tuning_torch.py
irvine/air_quality/: aq_eda.py  aq_etl.py  aq_model.py  aq_models.py  aq_notebook.ipynb  lstm_model.py  tuning_sklearn.py  tuning_torch.py
irvine/auto/: Makefile  as_demo.py  requirements.txt
llm/prompt/: config.py  connections.py  stability.py
llm/prompt/connections/: connections.py  example_instances.py  scrape.js  util.py
profile/: Makefile  ReadMe.md  requirements.txt
sandbox/jhanley634/: product.py  product_test.py
sandbox/mypreciously/: ReadMe.md
so/2025_10/: scrape_cbp_table.py
so/2025_12/: bool_type_check_test.py
so/2025_12/coupon/: gen_workload.py  model.py
so/so_2025_10/: scrape_cbp_table.py
so/so_2025_12/bool_type_check/: bool_type_check_test.py
so/so_2025_12/coupon/: gen_workload.py  model.py
