
[project]
name = "ml-2025"
version = "0.0.1"
requires-python = ">=3.12"

[tool.black]
line-length = 100

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             100

[tool.mypy]
exclude = "^.*/.venv/"

[tool.pyright]
# typeCheckingMode = "strict"
reportUninitializedInstanceVariable = true
# reportUnknownVariableType = true
# reportUnknownArgumentType = true
reportMissingTypeStubs = false
exclude = [
    "**/.venv/",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C", "C4", "C90", "COM",
    "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G", "ICN", "INT", "ISC",
    "LOG", "N", "NPY", "PD", "PERF", "PIE", "PL", "PTH", "PYI", "Q", "RET", "RSE", "RUF",
    "SIM", "SLF", "SLOT", "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = [
    "PD901",
    "PLR2004",
]
